--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="%PUBLIC_URL%/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1a2e" />
     <meta name="description" content="Chinnapattu S Hari Krishna - Computer Science Student | Full-Stack Developer | AI Enthusiast" />
